# Advent_of_code

2022/rust/: justfile
2022/rust/day-01/: puzzle.md
2022/rust/day-04/: puzzle.md
2022/rust/day-05/: puzzle.md
2022/rust/day-06/: bacon.toml
2022/rust/day-07/: .gitignore  puzzle.md
2022/rust/day-08/: puzzle.md
2022/rust/day-09/: Cargo.toml  justfile  puzzle.md
2022/rust/day-10/: Cargo.toml
2022/rust/day-11/: puzzle.md
2022/rust/day-12/: Cargo.toml  graph.dot
2023/rust/: .gitignore  Cargo.toml  benchmarks.txt  dhat-heap.json  flake.nix  justfile
2023/rust/daily-template/: Cargo.toml
2023/rust/day-01/: Cargo.toml
2023/rust/day-02/: Cargo.toml  puzzle.md
2023/rust/day-03/: Cargo.toml
2023/rust/day-04/: Cargo.toml  puzzle.md
2023/rust/day-05/: Cargo.toml
2023/rust/day-06/: Cargo.toml  puzzle.md
2023/rust/day-07/: Cargo.toml  puzzle.md
2023/rust/day-08/: Cargo.toml
2023/rust/day-09/: Cargo.toml
2023/rust/day-10/: Cargo.toml  puzzle.md
2023/rust/day-11/: Cargo.toml
2023/rust/day-12/: Cargo.toml  puzzle.md
2023/rust/day-13/: Cargo.toml
2023/rust/day-14/: Cargo.toml  puzzle.md
2023/rust/day-15/: Cargo.toml  puzzle.md
2023/rust/day-16/: Cargo.toml  puzzle.md
2023/rust/day-17/: Cargo.toml  puzzle.md
2023/rust/day-17/src/: part1.rs  part2.rs
2023/rust/day-18/: Cargo.toml  grid.txt
2023/rust/day-19/: Cargo.toml  puzzle.md
2023/rust/day-20/: Cargo.toml  puzzle.md
2023/rust/day-21/: puzzle.md
2023/rust/day-22/: Cargo.toml  puzzle.md
2023/rust/day-23/: Cargo.toml  puzzle.md
2023/rust/day-24/: Cargo.toml  puzzle.md
2023/rust/day-25/: Cargo.toml  puzzle.md
2023/rust/day-25/src/: part1.rs
2024/rust/: benchmarks.txt  dhat-heap.json  flake.nix  justfile
2024/rust/day-01/: Cargo.toml  puzzle.md
2024/rust/day-02/: Cargo.toml  (+1 more)
(+64 files in other folders)
