[package]
name = "day-25"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools.workspace = true
nom.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
miette.workspace = true
thiserror.workspace = true
dhat.workspace = true
nom-supreme.workspace = true
glam.workspace = true
nom_locate.workspace = true
petgraph.workspace = true
rustworkx-core = "0.14.2"

[dev-dependencies]
criterion.workspace = true
divan.workspace = true
rstest.workspace = true
test-log.workspace = true

[[bench]]
name = "day-25-bench"
path = "benches/benchmarks.rs"
harness = false

[features]
dhat-heap = []

[[bin]]
name = "part1"
path = "src/bin/part1.rs"
doc = false

[[bin]]
name = "part2"
path = "src/bin/part2.rs"
doc = false
